// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic Matomo functionality initPagesRouter should NOT create events when url is not provided 1`] = `[]`;

exports[`Basic Matomo functionality initPagesRouter should create a js tag and initialize 1`] = `
[
  [
    "trackPageView",
  ],
  [
    "enableLinkTracking",
  ],
  [
    "setTrackerUrl",
    "https://YO/matomo.php",
  ],
  [
    "setSiteId",
    "42",
  ],
]
`;

exports[`Basic Matomo functionality push should append data to window._paq 1`] = `
[
  [
    "trackEvent",
    "kikoo",
    "lol",
  ],
]
`;

exports[`Basic Matomo functionality push should append dimensions data to window._paq 1`] = `
[
  [
    "trackEvent",
    "kikoo",
    "lol",
    null,
    null,
    {
      "dimension1": "ok",
      "dimension2": "foobar",
    },
  ],
]
`;
